// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mono > monorepo > build bar 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`mono > monorepo > build foo 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`mono > project references > build bar 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
  "index.special.d.mts",
  "index.special.d.ts",
  "index.special.js",
  "index.special.min.js",
  "index.special.min.mjs",
  "index.special.mjs",
]
`;

exports[`mono > project references > build foo 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`mono > project references > build fuo 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`mono > project references > build fuu 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`mono > root package > common 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`no mono > export self subpath 1`] = `
[
  "base.cjs",
  "base.d.cts",
  "base.d.ts",
  "base.js",
  "base.min.cjs",
  "base.min.js",
  "index.cjs",
  "index.d.cts",
  "index.d.ts",
  "index.js",
  "index.min.cjs",
  "index.min.js",
]
`;

exports[`no mono > glob exports 1`] = `
[
  "index.cjs",
  "index.d.cts",
  "index.d.ts",
  "index.js",
  "index.min.cjs",
  "index.min.js",
  "sub",
  "sub/bar.cjs",
  "sub/bar.d.cts",
  "sub/bar.d.ts",
  "sub/bar.js",
  "sub/bar.min.cjs",
  "sub/bar.min.js",
  "sub/bor.cjs",
  "sub/bor.d.cts",
  "sub/bor.d.ts",
  "sub/bor.js",
  "sub/bor.min.cjs",
  "sub/bor.min.js",
  "sub/foo.cjs",
  "sub/foo.d.cts",
  "sub/foo.d.ts",
  "sub/foo.js",
  "sub/foo.min.cjs",
  "sub/foo.min.js",
  "sub/fuo.cjs",
  "sub/fuo.d.cts",
  "sub/fuo.d.ts",
  "sub/fuo.js",
  "sub/fuo.min.cjs",
  "sub/fuo.min.js",
]
`;

exports[`no mono > import type from subpath 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`no mono > multiple exports 1`] = `
[
  "foo.d.mts",
  "foo.d.ts",
  "foo.js",
  "foo.min.js",
  "foo.min.mjs",
  "foo.mjs",
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`no mono > only minify 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.mjs",
]
`;

exports[`no mono > require in mjs 1`] = `
[
  "index.cjs",
  "index.d.cts",
  "index.d.ts",
  "index.js",
  "index.min.cjs",
  "index.min.js",
]
`;

exports[`no mono > resolve imports 1`] = `
[
  "index.cjs",
  "index.d.cts",
  "index.d.ts",
  "index.js",
  "index.min.cjs",
  "index.min.js",
]
`;

exports[`no mono > simple 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`no mono > simple cts 1`] = `
[
  "foo.cjs",
  "foo.d.cts",
  "foo.min.cjs",
  "index.cjs",
  "index.d.cts",
  "index.d.ts",
  "index.js",
  "index.min.cjs",
  "index.min.js",
]
`;

exports[`no mono > simple mjs 1`] = `
[
  "index.cjs",
  "index.d.cts",
  "index.d.ts",
  "index.js",
  "index.min.cjs",
  "index.min.js",
]
`;

exports[`no mono > unordered exports inputs 1`] = `
[
  "a.d.mts",
  "a.d.ts",
  "a.js",
  "a.min.js",
  "a.min.mjs",
  "a.mjs",
  "b.d.mts",
  "b.d.ts",
  "b.js",
  "b.min.js",
  "b.min.mjs",
  "b.mjs",
]
`;

exports[`no mono > with no resolve exports 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`no mono > with scss file import 1`] = `
[
  "foo.css",
  "foo.d.mts",
  "foo.d.ts",
  "foo.js",
  "foo.min.js",
  "foo.min.mjs",
  "foo.mjs",
  "index.css",
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
  "index.styless.d.mts",
  "index.styless.d.ts",
  "index.styless.js",
  "index.styless.min.js",
  "index.styless.min.mjs",
  "index.styless.mjs",
]
`;
